--- a/src/assets/css/minpian.scss
+++ b/src/assets/css/minpian.scss
@@ -435,7 +435,7 @@ ul.seachNav{
       font-size: .28rem;
       border-radius: 1rem;
     }
-    input[type="submit"]{
+    input[type="button"]{
       background: #406ff4;
       color: #fff;
     }
