--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -147,7 +147,7 @@ input{
 input[type=button], input[type=submit], input[type=file], button { cursor: pointer; -webkit-appearance: none; }
 
 body,ul,ol,dl,dd,h1,h2,h3,h4,h5,h6,p,input,select,textarea,form{margin: 0; padding: 0;}
-body{font:14px/1.4rem "微软雅黑";}
+body{font:14px/1.4rem "微软雅黑";background: #fff;}
 img{border:none;}
 ul,ol{list-style:none;}
 input,select,textarea{outline:none;border:none;background:none;}
