huojia di er qi

--- a/src/assets/css/minpian.scss
+++ b/src/assets/css/minpian.scss
@@ -419,7 +419,7 @@ ul.seachNav{
   position: fixed;
   top: 0;bottom: 0;
   left: 0;right: 0;
-  z-index: 888;
+  z-index: 8888888888;
   background: #fff;
   .checkbox{
     border-bottom: none;
