--- a/src/assets/css/minpianxq.scss
+++ b/src/assets/css/minpianxq.scss
@@ -16,6 +16,16 @@
     position: absolute;
     left: .25rem;
   }
+  .recommend{
+      width: 2rem;
+     height: 100%;
+    position: absolute;
+    top:0;right: 0;
+    margin: auto;
+    color: #406ff4;
+    font-size: .34rem;
+    line-height: 1rem;
+  }
 }
 .xzimg{
   width: 100%;
@@ -59,6 +69,9 @@
 }
 .lxqlist{
   width: 100%;
+  &.active{
+    margin-bottom: 1rem;
+  }
   li{
     width: 100%;
     height: 1.1rem;
@@ -83,7 +96,31 @@
     }
   }
 }
-
+.xqbun{
+  width: 100%;
+  height: .88rem;
+  border-top: .1rem solid #f7f7f8;
+  position: fixed;
+  left: 0;right: 0;
+  bottom: 0;
+  margin: auto;
+  @include clear;
+  a{
+    display: block;
+    width: 50%;
+    height: 100%;
+    line-height: .88rem;
+    background: #fff;
+    font-size: .28rem;
+    color: #406ff4;
+    float: left;
+    text-align: center;
+    &:last-child{
+      color: #fff;
+      background: #406ff4;
+    }
+  }
+}
 //商标服务列表
 .xqfwlb{
   width: 100%;
