--- a/src/assets/css/register.scss
+++ b/src/assets/css/register.scss
@@ -226,10 +226,10 @@
 }
 .sblist{
   width: 100%;
-  margin-bottom: 1.2rem;
   li{
     width: 100%;
     padding: .27rem 0;
+    padding-bottom: 0;
     box-sizing: border-box;
     .top{
       width: 100%;
@@ -250,6 +250,9 @@
         font-size: .32rem;
         color: #001026;
         font-weight: 500;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
       p{
         font-size: .24rem;
@@ -605,7 +608,7 @@
           top:.74rem;left: 0;
           margin: auto;
           box-shadow: #969696 0px 0px 10px;
-          z-index: 8;
+          z-index: 88888;
           li{
             width: 100%;
             height: .8rem;
@@ -826,3 +829,84 @@
     }
   }
 }
+.null{
+  width: 100%;
+  position: fixed;
+  top: 2rem;left: 0;right: 0;
+  bottom: 1rem;
+  margin: auto;
+  font-size: .28rem;
+  color: #62686f;
+  text-align: center;
+  img{
+    width: 2.11rem;
+    display: block;
+    margin: 0 auto;
+    margin-top: 2rem;
+    margin-bottom: 0.3rem;
+  }
+}
+//智能推荐列表
+.recommend{
+  width: 100%;
+  .recheader{
+    width: 100%;
+    height: 1rem;
+    font-size: .38rem;
+    color: #001026;
+    text-align: center;
+    line-height: 1rem;
+    border-bottom: 1px solid #e9ebee;
+    background: #ffffff;
+    z-index: 88;
+    position: relative;
+    .return{
+      width: percentage(100/750);
+      height: 100%;
+      background: url(#{$backimg}logicon.png)no-repeat;
+      background-position: center center;
+      background-size: .48rem .48rem;
+      position: absolute;
+      top:0;left: 0;margin: auto;
+    }
+  }
+  .my-scroller{
+    top:1rem;
+  }
+  .sblist{
+    width: 100%;
+    padding: 0 0.23rem;
+    box-sizing: border-box;
+    margin-top: 1rem;
+    margin-top: 0;
+    li{
+      border-bottom: 1px solid #e9ebee;
+      position: relative;
+      padding-bottom: 0.27rem;
+      .top{
+        padding: 0;
+      }
+      a{
+        display: block;
+        position: absolute;
+        top:.35rem;right: 0.1rem;
+        width: 1.38rem;
+        height: .6rem;
+        text-align: center;
+        line-height: .6rem;
+        border: 1px solid #406ff4;
+        border-radius: .1rem;
+        color: #406ff4;
+        font-size: .28rem;
+      }
+      .font h6{
+        padding-right: 1.8rem;
+        box-sizing: border-box;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+    }
+  }
+}
+
