--- a/src/assets/css/sellsb.scss
+++ b/src/assets/css/sellsb.scss
@@ -279,7 +279,16 @@
         background-size: 0.26rem 0.19rem;
         padding-right: 0.8rem;
         box-sizing: border-box;
+        p{
+          max-width: 70%;
+          line-height: 1rem;
+          float: left;
+          overflow: hidden;
+          text-overflow:ellipsis;
+          white-space: nowrap;
+        }
         span{
+          width: 30%;
           color: #6386f5;
         }
       }
@@ -368,6 +377,10 @@
 //----------我的发布--------------//
 .iissue{
   width: 100%;
+  position: fixed;
+  top:0;left: 0;right: 0;bottom: 0;
+  margin: auto;
+  overflow: hidden;
   .header{
     width: 100%;
     text-align: center;
@@ -379,7 +392,6 @@
   }
   ul.sblist{
     width: 100%;
-    margin-bottom: 2rem;
     li{
       width: 100%;
       padding: 0.25rem;
@@ -437,4 +449,29 @@
     height: 100%;
     float: right;
   }
+}
+.safaris{
+  position: fixed;
+  top:0;left: 0;right: 0;bottom: 0;
+  margin: auto;
+  z-index: 8888;
+  .shade{
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.7);
+  }
+  .imgs{
+    width: 6.4rem;
+    height: 7.74rem;
+    position: absolute;
+    top:0;left: 0;right: 0;bottom: 0;
+    margin: auto;
+    z-index: 888;
+    background: url(#{$backimg}safari.jpg)no-repeat;
+    background-position: center center;
+    background-size: 6.4rem 7.74rem;
+  }
+}
+.my-scroller{
+  top:1rem;
 }
