--- a/src/assets/css/register.scss
+++ b/src/assets/css/register.scss
@@ -909,4 +909,26 @@
     }
   }
 }
+.safaris{
+  position: fixed;
+  top:0;left: 0;right: 0;bottom: 0;
+  margin: auto;
+  z-index: 8888;
+  .shade{
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.7);
+  }
+  .imgs{
+    width: 6.4rem;
+    height: 7.74rem;
+    position: absolute;
+    top:0;left: 0;right: 0;bottom: 0;
+    margin: auto;
+    z-index: 888;
+    background: url(#{$backimg}safari.jpg)no-repeat;
+    background-position: center center;
+    background-size: 6.4rem 7.74rem;
+  }
+}
 
