xiu fu mai sb bug

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -177,3 +177,7 @@ a{text-decoration:none;}
   border-radius: 0.1rem;
   display: inline-block;
 }
+input[type="button"], input[type="submit"], input[type="reset"] {
+  -webkit-appearance: none;
+}
+textarea {  -webkit-appearance: none;}
