--- a/src/assets/css/register.scss
+++ b/src/assets/css/register.scss
@@ -822,6 +822,7 @@
     input[type="reset"]{
       background: #f7f7f8;
       border-top: 1px solid #e9ebee;
+      border-radius: 0;
     }
     input[type="button"]{
       background: #406ff4;
