--- a/src/assets/css/sellsb.scss
+++ b/src/assets/css/sellsb.scss
@@ -1,6 +1,11 @@
 //-----------发布商标-------------------//
 .sellform{
   width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;right: 0;
+  top: 0;bottom: 0;
+  margin: auto;
   ul.formnav{
     width: 100%;
     height: 1rem;
@@ -106,9 +111,8 @@
     font-size: .28rem;
     color: #ffa838;
     line-height: .4rem;
-    position: absolute;
-    bottom: 1.5rem;left: 0;right: 0;
-    margin: auto;
+    margin: 0 auto;
+    margin-top: 3rem;
     div{
       width: 4.2rem;
       height: .8rem;
@@ -472,6 +476,34 @@
     background-size: 6.4rem 7.74rem;
   }
 }
-.my-scroller{
+._v-container{
   top:1rem;
+}
+.footlist{
+  width: 3.6rem;
+  background: #fff;
+  position: fixed;
+  bottom: 1rem;
+  right: 0;
+  margin: auto;
+  -webkit-box-shadow: #969696 0px 0px 10px;
+  box-shadow: #969696 0px 0px 10px;
+}
+.footlist li{
+  width: 100%;
+  height: .92rem;
+  border-bottom: 1px solid #e9ebee;
+  font-size: .28rem;
+  color: #5a5a5a;
+  line-height: .92rem;
+  padding-left: .6rem;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.footlist li a{
+  display: block;
+  line-height: .92rem;
+  width: 100%;
+  height: 100%;
+  color: #5a5a5a;
 }
