--- a/src/assets/css/industrybrand.scss
+++ b/src/assets/css/industrybrand.scss
@@ -153,18 +153,32 @@
 }
 .brand{
   width: 100%;
-  height: 1.82rem;
+  margin-bottom: 0.2rem;
   @include clear;
   li{
     width: 50%;
-    height: 100%;
+    height: 2rem;
     float: left;
     padding-top: .5rem;
     padding-left: .5rem;
     box-sizing: border-box;
+    position: relative;
+
     font-size: .3rem;
     color: #62686f;
-    &:last-child{
+    &:before{
+      content: "";
+      position: absolute;
+      left: 0;right: 0;
+      bottom: 0;
+      margin: auto;
+      width: 100%;
+      height: .2rem;
+      background: #f7f7f8;
+      border-bottom: 1px solid #e9ebee;
+      border-top: 1px solid #e9ebee;
+    }
+    &:nth-child(2n){
       position: relative;
       &:after{
         content: "";
@@ -175,6 +189,7 @@
         height: 50%;
         background: #e9ebee;
       }
+
     }
     i{
       color: #001026;
@@ -188,6 +203,9 @@
       padding-right: .2rem;
     }
   }
+  .borders{
+    float: left;
+  }
 }
 .click{
   width: 3.3rem;
@@ -199,6 +217,8 @@
   line-height: .88rem;
   color: #95affa;
   margin: 0.3rem auto;
+  margin-bottom: 1.5rem;
+  z-index: 1;
 }
 .brfooter{
   width: 100%;
@@ -208,6 +228,8 @@
   bottom: 0;left: 0;right: 0;
   margin: auto;
   @include clear;
+  z-index: 8888;
+  background: #fff;
   li{
     width: 50%;
     height: 100%;
@@ -284,4 +306,65 @@
       }
     }
   }
+}
+.bulletin{
+  width: 100%;
+  h6{
+    font-size: .34rem;
+    color: #001026;
+    margin-left: 0.2rem;
+    font-weight: 500;
+    line-height: .8rem;
+  }
+  ul{
+    width: 100%;
+    @include clear;
+    li{
+      width: 50%;
+      height: 1.5rem;
+      float: left;
+      border-top: 1px solid #e9ebee;
+      padding-left: .4rem;
+      padding-top: .3rem;
+      box-sizing: border-box;
+      p{
+        font-size: .26rem;
+        color: #62686f;
+        span{
+          font-size: .4rem;
+          color: #001026;
+        }
+        span.span{
+          font-size: .3rem;
+          line-height: .8rem;
+        }
+      }
+      &:nth-child(2n){
+        border-left: 1px solid #e9ebee;
+      }
+    }
+  }
+  .imglist{
+    width: 100%;
+    li{
+      width: 50%;
+      height: 2rem;
+      box-sizing: border-box;
+    }
+  }
+}
+.null{
+  width: 100%;
+  font-size: .3rem;
+  text-align: center;
+  padding-top: 2.5rem;
+ img{
+   width: 2.11rem;
+   display: block;
+   margin: .5rem auto;
+ }
+}
+
+._v-container{
+  top:2rem;
 }
