--- a/src/assets/css/sellsb.scss
+++ b/src/assets/css/sellsb.scss
@@ -112,7 +112,7 @@
     color: #ffa838;
     line-height: .4rem;
     margin: 0 auto;
-    margin-top: 3rem;
+    margin-top: .5rem;
     div{
       width: 4.2rem;
       height: .8rem;
@@ -227,6 +227,7 @@
     color: #fff;
     font-size: .34rem;
     border-radius: 1rem;
+    margin-bottom: 1.2rem;
   }
 }
 //----------批量搜索商标--------------//
